tests/errors/f_1_2.ctp

class (Point:
    a: int  # TODO get rid of automatic 'int x;'
    b: int
)

def (main:
    Point(1,2)    
    x:float = 0
    y:float = 0
    Point(x,y)    
)
    
    